/**
* MIT License
*
* Copyright (c) 2025 Sonardyne International Limited
*
* Permission is hereby granted, free of charge, to any person obtaining a copy
* of this software and associated documentation files (the "Software"), to deal
* in the Software without restriction, including without limitation the rights
* to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
* copies of the Software, and to permit persons to whom the Software is
* furnished to do so, subject to the following conditions:
*
* The above copyright notice and this permission notice shall be included in all
* copies or substantial portions of the Software.
*
* THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
* IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
* FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
* AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
* LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
* OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
* SOFTWARE.
*/

syntax = "proto3";

import "sonardyne/api/common/result.proto";
import "sonardyne/api/common/timestamp.proto";
import "sonardyne/api/services/observation_service/observation_subscription.proto";

package sonardyne.api.services.observation_service;

// ObservationSubscriptionResponse is returned in response to an ObservationSubscriptionRequest.
// It indicates whether the requested observation subscriptions were successfully applied on the ObservationStream.
// It provides a timestamp for the response, the result status, and a list of the observation subscriptions
// currently active after processing the request.
message ObservationSubscriptionResponse {
  uint32 request_uid                                          = 1;  // Matches the corresponding ObservationSubscriptionRequest.
  sonardyne.api.common.Timestamp timestamp                    = 2;  // Timestamp of the response.
  sonardyne.api.common.Result result                          = 3;  // Indicates success or failure of the subscription request.
  repeated ObservationSubscription observation_subscriptions  = 4;  // List of observation subscriptions returned in the response.
}
